datepicker fonctionnel pour l'ajout de match

--- a/AndroidProject/app/src/main/res/layout/match_informationtest.xml
+++ b/AndroidProject/app/src/main/res/layout/match_informationtest.xml
@@ -37,6 +37,8 @@
         </LinearLayout>
 
 
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -67,6 +69,8 @@
                 android:layout_weight="1" />
         </LinearLayout>
     </LinearLayout>
+
+
 
     <LinearLayout
         android:orientation="vertical"
@@ -114,21 +118,30 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:layout_weight="0.18"
-        android:background="@android:drawable/alert_light_frame">
+        android:layout_height="50dp">
 
-        <EditText
+
+        <Button
+            android:text="Choose the date"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:inputType="textPersonName"
-            android:text="Date"
-            android:ems="10"
-            android:id="@+id/editText7"
-            android:textAlignment="center"
-            android:layout_weight="0.61" />
+            android:layout_height="wrap_content"
+            android:id="@+id/button4" />
     </LinearLayout>
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="42dp">
+    <TextView
+        android:text=""
+        android:layout_width="match_parent"
+        android:layout_height="42dp"
+        android:id="@+id/textView6"
+        android:textStyle="normal|bold" />
+        </LinearLayout>
+
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -141,3 +154,4 @@
         android:layout_weight="0.37" />
     </LinearLayout>
 </LinearLayout>
+
