--- a/AndroidProject/app/src/main/res/layout/activity_main.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_main.xml
@@ -113,7 +113,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:background="@android:drawable/alert_light_frame"
-            android:layout_height="108dp">
+            android:layout_height="108dp"
+            android:id="@+id/openteam2">
 
             <WebView
                 android:layout_height="match_parent"
@@ -167,7 +168,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:background="@android:drawable/alert_light_frame"
-            android:layout_height="108dp">
+            android:layout_height="108dp"
+            android:id="@+id/openteam3">
 
             <WebView
                 android:layout_height="match_parent"
@@ -220,7 +222,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:background="@android:drawable/alert_light_frame"
-            android:layout_height="110dp">
+            android:layout_height="110dp"
+            android:id="@+id/openteam4">
 
             <WebView
                 android:layout_height="match_parent"
