finish ergnomic UI, no broken link, no deadend

--- a/AndroidProject/app/src/main/res/layout/teams_composition.xml
+++ b/AndroidProject/app/src/main/res/layout/teams_composition.xml
@@ -155,7 +155,11 @@
                 android:gravity="center"
                 android:layout_weight="1" />
         </LinearLayout>
-
+        <Button
+            android:text="@string/backbutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/button9" />
     </LinearLayout>
 
 </LinearLayout>
