--- a/AndroidProject/app/src/main/res/layout/activity_maps2.xml
+++ b/AndroidProject/app/src/main/res/layout/activity_maps2.xml
@@ -14,7 +14,7 @@
             android:text="back"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:id="@+id/backbutton" />
+            android:id="@+id/backButton" />
 
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
